# my-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  db.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: check_submission.ps1  check_submission.sh
server/: __init__.py  app.py
static/: index.html
tasks/: __init__.py  easy.py  hard.py  medium.py  scoring.py
