[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-cultural-support-openenv"
version = "1.0.0"
description = "Cross-Cultural Customer Support Escalation OpenEnv environment"
requires-python = ">=3.10,<3.14"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "openai",
]

[project.scripts]
server = "server.app:main"
